# Supera

./: .gitignore  CMakeLists.txt  Cropper.cc  Cropper.h  GNUmakefile  Image.cc  Image.h  MCImage.cc  MCImage.h  README.md  RawDigitsToImageI.cc  RawDigitsToImageI.h  Supera_module.cc  configure.sh  db_lmdb.cc  shave.fcl
APICaffe/: GNUmakefile  LinkDef.h  aho.cxx  aho.h  converter_base.cxx  converter_base.h  db_lmdb.cxx  lmdb_converter.cxx  lmdb_converter.h
APILArSoft/: BNBCosmics_module.cc  CMakeLists.txt  ConverterAPI.cxx  ConverterAPI.h  Cropper.cxx  Cropper.h  FilterBase.cc  FilterBase.h  FilterEmptyImages.cc  FilterEmptyImages.h  FilterFactory.cxx  FilterFactory.h  ImageDivider_module.cc  ImageExtractor.cxx  ImageExtractor.h  MCParticleTree.cc  MCParticleTree.h  RegionDefiner.cc  RegionDefiner.h  Supera_module.cc  YoloWire_module.cc  Yolo_module.cc  aho  bnbcosmics.fcl  frcnn_driver.fcl  frcnn_driver_wneutrino.fcl  imagedivider.fcl  run_imagedivider.fcl  supera.fcl  supera_driver.fcl  yolo.fcl  yolo_cosmics.fcl  yolo_driver.fcl  yolo_singlep.fcl  yolo_singlep_pizero.fcl  yolowire.fcl  yolowire_driver.fcl
APILArSoft/arxiv/: Supera_module.cc
APILArSoft/train_singlep/: yolo_traingen_singlep_common.fcl  yolo_traingen_singlep_eminus.fcl  yolo_traingen_singlep_gamma.fcl  yolo_traingen_singlep_kminus.fcl  yolo_traingen_singlep_muminus.fcl  yolo_traingen_singlep_piminus.fcl  yolo_traingen_singlep_pizero.fcl  yolo_traingen_singlep_proton.fcl
LArCV/: GNUmakefile  IOManager.h  IOManager.inl  LArCVTypes.h  LinkDef.h  ProductMap.cxx  ProductMap.h  larcv_logger.cxx
LArCV/tmp/: IOManager.cxx  IOManager.h  LArCaffeUtils.cxx  LArCaffeUtils.h  range_test.cxx  range_test.h
LArCVData/: GNUmakefile  IOManager.h  IOManager.inl  IOManagerTemplates.h  Image2D.cxx  Image2D.h  ImageMeta.h  LinkDef.h  test_write.py
LArCVData/arxiv/: Image2D.cxx  Image2D.h  ImageMeta.h
LArCaffe/: CMakeLists.txt  Image.cxx  Image.h  LArCaffeTypes.h  LArCaffeUtils.cxx  LArCaffeUtils.h  LinkDef.h  MCImage.h  Makefile  cmake_install.cmake  larbys.h  larcaffe_base.h  larcaffe_logger.cxx  larcaffe_logger.h
LArCaffe/LArCaffe/: Makefile  cmake_install.cmake
LArCaffe/LLSupera/: Makefile  cmake_install.cmake
LArCaffe/SuperaCore/: Makefile  cmake_install.cmake
LLSupera/: CMakeLists.txt  LinkDef.h  MyTrial.cxx  MyTrial.h
Makefile/: GNUmakefile.CORE
SuperaCore/: CMakeLists.txt  LinkDef.h  SuperaTypes.h  caffe.pb.cxx  caffe.pb.h  converter_base.cxx  converter_base.h  db.h  db_lmdb.h  lmdb_converter.cxx  lmdb_converter.h  supera_base.cxx  supera_base.h  supera_exception.h  supera_logger.cxx  supera_logger.h
arxiv/: caffe.pb.cc  db.cc
doc/: doxygenSupera+.script  doxygenSupera.script
scripts/: setup.sh
test/: caffe_pb2.py  make_pngs.py  test_larby_db.ipynb  yolo_images.py  yolo_interaction_images.py
